# compi

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  build_and_run.sh  build_docs.sh  compi.c  cvhdl.c  parse.c  parse.h  run_tests.sh  token.c  utils.h
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compi  compi_tests  compi_tests[1]_include.cmake  compi_tests[1]_tests.cmake
docs/source/: architecture.rst  code_quality.rst  conf.py  contributing.rst  examples.rst  index.rst  internals.rst  known_issues.rst  license.rst  modules.rst  testing.rst  usage.rst
docs/source/_static/: custom.css
docs/source/internals/: algorithms.rst  ast.rst  codegen.rst  error_handling.rst  lexer.rst  overview.rst  parser.rst  symbols.rst  types.rst
examples/: example.c  function_calls.c  struct_example.c  test_error_handler.c
include/: astnode.h  codegen_vhdl.h  error_handler.h  parse_expression.h  parse_function.h  parse_statement.h  parse_struct.h  symbol_structs.h  token.h  utils.h
src/: astnode.c  astnode.h  compi.c  error_handler.c  parse.c  parse.h  symbol_arrays.h  symbol_structs.c  token.c  token.h  utils.c  utils.h
src/app/: compi.c
src/codegen/: codegen_vhdl.c  codegen_vhdl_constants.c  codegen_vhdl_constants.h  codegen_vhdl_expressions.c  codegen_vhdl_expressions.h  codegen_vhdl_helpers.c  codegen_vhdl_helpers.h  codegen_vhdl_main.c  codegen_vhdl_statements.c  codegen_vhdl_statements.h  codegen_vhdl_types.c  codegen_vhdl_types.h
src/core/: astnode.c  utils.c
src/parser/: parse.c  parse_expression.c  parse_function.c  parse_statement.c  parse_struct.c  token.c
src/symbols/: symbol_arrays.c  symbol_structs.c
tests/: basic_tests.cpp  test_error_handler.cpp
